--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,47 +1,58 @@
+
+*{
+	box-sizing: border-box;
+}
 h1{
 	color: black;
 	text-align: center;
 	font: Arial;
 	margin-bottom: 70px;
 }
-#container {
-  position: relative;
-  
+
+.content{
+	margin: 10px;
+	background-color: grey;
+  	border: 2px solid black;
 }
-section{
+
+p{
+
 	clear: right;
+
+	margin-left: auto;
+	margin-right: auto;
+  	font-family: Helvetica;
+  	color: black;
+  	width: 90%;
+  	height: 150px;
+  	
 }
 .row{
 	width: 100%;
+	
 }
-p{
+h3{
+	
+	padding: 0;
+	margin-top: 0;
 
-  	border: 2px solid black;
-  	background-color: grey;
-  	width: 90%;
-  	height: 150px;
-  	margin-right: auto;
-  	margin-left: auto;
-  	font-family: Helvetica;
-  	color: black;
+  	
 }
-#p1{
+#h1{
 	background-color: pink;
 	border: 2px solid black;
-  	position: relative;
-  	left: 315px;
+  	float: right;
 }
-#p2{
+#h2{
 	background-color: red;
 	border: 2px solid black;
-  	position: relative;
-  	left: 340px;
+  	float: right;
+  	
 }
-#p3{
+#h4{
 	background-color: yellow;
 	border: 2px solid black;
-  	position: relative;
-  	left: 332px;
+  	float: right;
 }
 @media(min-width: 992px)
 {
@@ -49,6 +60,9 @@ p{
 	{
 		float: left;
 		
+
+
+
 
 	}
 
@@ -69,6 +83,7 @@ p{
   	}
   	.col-lg-4 {
     	width: 33.33%;
+
     	
   	}
   	.col-lg-5 {
@@ -109,6 +124,7 @@ p{
 	.col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,.col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12
 	{
 		float: left;
+		
 		
 	}
 	.col-md-1{
@@ -158,5 +174,14 @@ p{
   	.col-md-12 {
     	width: 100%;
   	}
+ }
+@media(max-width: 767px){
+	.col-sx-12{
+		float: left;
+		width: 100%;
+		
+	}
 
 }
+
+
